--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<sonar.organization>ianselley</sonar.organization>
+		<sonar.projectKey>92828a876d0d1dbd7cf68e8698cbdd3985a2e459</sonar.projectKey>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
